	$Id$
-----------------------------------------------------------------------------------------

2012-01-06	pwessel
	* gmt_plot.c:		Made geo_vector properly adjust for half-head vectors
	* pslib.c:		Made psl_vector and psl_matharc adjust for half-head vectors
	* gmt_init.c:		Revised -Sf front syntax to use modifiers. Backwards compatible.

2012-01-04	pwessel
	* grdvector.c:		Updated -Q to take new vector specification format.
				Made -E obsolete (since covered by modifier +jc) but
				is still active under compatibility mode.
	* psrose.c:		Updated -M to take new vector specification format.
				Added -Wv<pen> to specify pen for vector (in -C).

2012-01-01	pwessel
	* gmt_plot.c:		Let +n<norm> be modifier for all vectors
	* gmt_init.c:		---"---
	* pslib.c:		Treat all vectors similarly regarding pen/fill

2011-12-30	pwessel
	* gmt_init.c:		Groundwork for new vector specifications
	* gmt_io.c:		Fixed bug with empty segments with headers
	* gmtapi_utils.c	Fixed bug in setting next input file
	* psxy[z].c:		New syntax for vectors (straight, great-circle, math)
	* pslib.c:		Revised vector functions
	* gmtspatial.c:		Change -M option to -Q

2011-12-19	remko
	* gmt_init.c:		Honor -B0 (map frame only). Also -Ba0f0g0, etc.

2011-12-17	pwessel
	* psxyz.c:		Testing out geovector symbol
	* psxy.c:		Added usage/doc for -S= great-circle vector symbols
				for both psxy and psxyz.

2011-12-15	pwessel
	* gmt_init.c:		Allow for multi-param symbols with geo-angles.
	* gmt_support.c:	---"---
	* psxy[z].c:		---"---
	* psxy.c:		Testing out geovector symbol

2011-12-14	remko
	* PSL_prologue.ps:	Introduced /PSL_transp to deal with transparency, supported
				both by Adobe Illustrator and ghostscript.
	* pslib.c, gmt_plot.c:	==="===
	* psldemo.c:		Added transparency example

2011-12-03	pwessel
	* gmtmath.c:		Did not check that -Tmin/max has min > max.
	
2011-12-03	pwessel
	* mgd77/mgd77track.c:	Did not set GMT's time system to Unix before dealing